<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/calculator_shape"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="258dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/calculator_screen"
                android:gravity="center_vertical|start"
                android:paddingStart="15dp"
                android:text="@string/hello"
                android:textColor="#00FF00"
                android:textSize="18sp"
                tools:ignore="NestedWeights,RtlSymmetry" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:backgroundTint="@null"
                android:textColor="#D4D1D1"
                android:background="@drawable/main_buttons"
                android:layout_weight="1"
                android:text="@string/delete" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/main_buttons"
                android:text="@string/ac"
                android:textColor="#D4D1D1"
                android:textSize="25sp"
                app:backgroundTint="@null"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:textColor="#D4D1D1"
                app:backgroundTint="@null"
                android:background="@drawable/main_buttons"
                android:text="@string/plus_minus"
                android:textSize="30sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:textColor="#D4D1D1"
                app:backgroundTint="@null"
                android:background="@drawable/main_buttons"
                android:text="@string/remainder"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:textColor="#D4D1D1"
                app:backgroundTint="@null"
                android:background="@drawable/main_buttons"
                android:text="@string/division"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:textColor="#D4D1D1"
                app:backgroundTint="@null"
                android:background="@drawable/main_buttons"
                android:text="@string/_7"
                android:textSize="30sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:textColor="#D4D1D1"
                app:backgroundTint="@null"
                android:background="@drawable/main_buttons"
                android:text="@string/_8"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                app:backgroundTint="@null"
                android:textColor="#D4D1D1"
                android:background="@drawable/main_buttons"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                app:backgroundTint="@null"
                android:textColor="#D4D1D1"
                android:background="@drawable/main_buttons"
                android:layout_weight="1"
                android:text="@string/x"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button10"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:textColor="#D4D1D1"
                app:backgroundTint="@null"
                android:background="@drawable/main_buttons"
                android:text="@string/_4"
                android:textSize="30sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/button11"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:textColor="#D4D1D1"
                app:backgroundTint="@null"
                android:background="@drawable/main_buttons"
                android:text="@string/_5"
                android:textSize="30sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button12"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:textColor="#D4D1D1"
                app:backgroundTint="@null"
                android:background="@drawable/main_buttons"
                android:text="@string/_6"
                android:textSize="30sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button13"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:textColor="#D4D1D1"
                android:layout_weight="1"
                app:backgroundTint="@null"
                android:background="@drawable/main_buttons"
                android:text="@string/minus"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button14"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:textColor="#D4D1D1"
                android:layout_weight="1"
                app:backgroundTint="@null"
                android:background="@drawable/main_buttons"
                android:text="@string/_3"
                android:textSize="30sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/button15"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:textColor="#D4D1D1"
                android:layout_weight="1"
                app:backgroundTint="@null"
                android:background="@drawable/main_buttons"
                android:text="@string/_2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button16"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:textColor="#D4D1D1"
                app:backgroundTint="@null"
                android:background="@drawable/main_buttons"
                android:text="@string/_1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button17"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:textColor="#D4D1D1"
                app:backgroundTint="@null"
                android:background="@drawable/main_buttons"
                android:text="@string/plus"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button18"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#D4D1D1"
                app:backgroundTint="@null"
                android:background="@drawable/main_buttons"
                android:text="@string/_0"
                android:textSize="30sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/button19"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#D4D1D1"
                app:backgroundTint="@null"
                android:background="@drawable/main_buttons"
                android:text="@string/coma"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button20"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#D4D1D1"
                app:backgroundTint="@null"
                android:background="@drawable/main_buttons"
                android:text="@string/equal"
                android:textSize="30sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
